Fixed too big padding for search input
The padding was so huge, that the input box managed to show
up to 3 letters at max.

--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -30,7 +30,7 @@ table .productCategory,
   display: flex;
   .search-query {
     width: 10em;
-    padding: 0.25em 4em;
+    padding: 0.25em 0.4em;
     margin-top: 0;
   }
 }
